--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
             // This calls your Python backend running locally (e.g., with waitress-serve)
             // In a hosted version, replace 'http://127.0.0.1:5000' with your backend's public URL.
             try {
-                const response = await fetch('http://127.0.0.1:5000/api/gemini', {
+                const response = await fetch('https://ai-assistance-backend-dffc.onrender.com', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
