--- a/index.html
+++ b/index.html
@@ -570,10 +570,10 @@
             addLoadingIndicator(); // Call the function here
 
             // --- Backend API Call ---
-            // This calls your Python backend running locally (e.g., with waitress-serve)
-            // In a hosted version, replace 'http://127.0.0.1:5000' with your backend's public URL.
+            // This calls your Python backend hosted on Render
+            // Make sure the URL includes the /api/gemini endpoint
             try {
-                const response = await fetch('https://ai-assistance-backend-dffc.onrender.com', {
+                const response = await fetch('https://ai-assistance-backend-dffc.onrender.com/api/gemini', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
