--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern AI Chat Design - Mobile Optimized</title>
+    <title>Geo's AI Assistant</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -397,7 +397,7 @@
 
         <div class="chat-area">
             <div class="chat-header">
-                AI Assistant
+                Geo's AI Assistant
             </div>
             <div class="chat-history" id="chat-history">
                 </div>
